--- a/AlphaPos/Index.html
+++ b/AlphaPos/Index.html
@@ -17,19 +17,7 @@
     <div class="row">
       <!-- left side order list -->
       <div class="col-md-4 p-4" data-order-lists>
-        <div class="card mb-3">
-          <div class="card-body pt-3 pr-3">
-            <div class="text-right">
-              <span data-alpha-pos="delete-drink">×</span>
-            </div>
-            <h6 class="card-title mb-1">Black Tea</h6>
-            <div class="card-text">Less Ice</div>
-            <div class="card-text">Half Sugar</div>
-          </div>
-          <div class="card-footer text-right py-2">
-            <div class="card-text text-muted">$ <span data-drink-price>30</span></div>
-          </div>
-        </div>
+        <!-- order list display here -->
 
         <div class="text-right">
           <button class="btn btn-light" data-alpha-pos="checkout">Checkout</button>
