--- a/A25-Q2-2/index.html
+++ b/A25-Q2-2/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="sliders">
       <div class="slider">
-        <h4 class="red">R</h4>
+        <h4 class="red">Red</h4>
         <input id="red" type="range" min="0" max="255" value="0">
         <h4 class="red red-number">0</h4>
       </div>
